Integrated frontend to backend

--- a/frontend/results.html
+++ b/frontend/results.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="results.css">
+  <link rel="stylesheet" href="styles/results.css">
   <title>Quote Finder</title>
 </head>
 <body>
   <section class="header">
   <div class="search-container">
-    <input type="text" class="search-bar" placeholder="Enter keywords">
+    <input id="search-bar" type="text" class="search-bar" placeholder="Enter keywords">
     <button class="search-button">Search</button>
   </div>
   <div class="title">
-      <img src="logo.png" alt="quotefinder-logo" class="quotefinder-logo">
+      <img src="images/logo.png" alt="quotefinder-logo" class="quotefinder-logo">
       <h2>Quote Finder</h2>
   </div>
 </section>
@@ -43,5 +43,7 @@
       </div>
     </section>
   </main>
-</body>
-</html>
+  <script src="scripts/results.js"></script>
+  </body>
+  
+  </html>
