--- a/frontend/home.html
+++ b/frontend/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="styles/home.css">
   <title>Quote Finder</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     </ul>
   </nav>
   <div class="title">
-      <img src="logo.png" alt="quotefinder-logo" class="quotefinder-logo">
+      <img src="images/logo.png" alt="quotefinder-logo" class="quotefinder-logo">
       <h2>Quote Finder</h2>
   </div>
 </section>
