Populated cards with search results

--- a/frontend/results.html
+++ b/frontend/results.html
@@ -18,32 +18,10 @@
   </div>
 </section>
   <main>
-    <section class="results-list">
-      <div class="result-card">
-        <p class="quote">"I like turtles! - Jane Doe"</p>
-        <div class="info">
-          <p class="source"><b>Source:</b> Speech at the University of Texas</p>
-          <p class="location"><b>Location:</b> Austin, USA</p>
-        </div>
-        <div class="info">
-          <p class="date"><b>Date:</b> January 15, 2023</p>
-          <p class="occupation"><b>Occupation:</b> Scientist</p>
-        </div>
-      </div>
-      <div class="result-card">
-        <p class="quote">"Imagination is more important than knowledge. - Albert Einstein"</p>
-        <div class="info">
-          <p class="source"><b>Source:</b> Interview with G.S. Viereck</p>
-          <p class="location"><b>Location:</b> Berlin, Germany</p>
-        </div>
-        <div class="info">
-          <p class="date"><b>Date:</b> March 18, 1921</p>
-          <p class="occupation"><b>Occupation:</b> Physicist</p>
-        </div>
-      </div>
+    <section class="results-list" id="results-list">
     </section>
   </main>
-  <script src="scripts/results.js"></script>
+  <script src="dist/results.js"></script>
   </body>
   
   </html>
