Implement Frontend Server

--- a/frontend/src/public/results.html
+++ b/frontend/src/public/results.html
@@ -21,7 +21,7 @@
     <section class="results-list" id="results-list">
     </section>
   </main>
-  <script src="dist/results.js"></script>
+  <script defer src="./scripts/results.js"></script>
   </body>
   
   </html>
