Added oauth for landing page

--- a/frontend/src/public/landing.html
+++ b/frontend/src/public/landing.html
@@ -19,10 +19,12 @@
     <h1>Welcome to QuoteFinder</h1>
     <h2>Making use of <b>Search Engine Database</b> technology!😎</h2>
     <h3>Please authenticate yourself here with the help of our friends at Google:</h3>
+    <a href="/auth/google">
+        <img src="images/btn_google_signin_dark_focus_web@2x.png" alt="Sign in with Google" /></a>
   </main>
   <footer>
-
+    <p>© QuoteFinder and BBD | All Rights Reserved</p>
   </footer>
-  <script defer src="scripts/home.js"></script>
+  <script defer src="scripts/landing.js"></script>
 </body>
 </html>
